Cleanup api paths, added tags
